feat: api get category
